# qperformance

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
egui_ref/: main.rs
environment/: apt_packages.txt
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
